epic high_score service
